<resources>
    <string name="app_name">UTN App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mis_cursos">Mis cursos</string>
    <string name="calendario_acad_mico">Calendario Académico</string>
    <string name="noticias">Noticias</string>
    <string name="configuracion">Configuración</string>
    <string name="salir">Salir</string>
    <string name="title_activity_login">UTN App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">El email es inválido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hello_noticias_fragment">noticias fragment</string>
    <string name="hello_calendario_fragment">calendario fragment</string>
    <string name="hello_cursos_fragment">Mis Cursos</string>
    <string name="auth_failed">Ha fallado la autenticación del usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuarioInvalido">Usuario y/o contraseña incorrectos</string>
    <string name="completarDatos">Debe completar los datos para ingresar</string>

    <string name="profesor">Profesor</string>
    <string name="codigo">Código</string>
    <string name="aula">Aula</string>
    <string name="sede">Sede</string>
    <string name="materia">Materia</string>

    <string name="fechas">Mis fechas</string>

    <string name="cursos_informacion">Información</string>
    <string name="cursos_mesajes">Mensajes</string>
    <string name="cursos_fechas">Fechas</string>
    <string name="mensaje_hint">Mensaje...</string>
    <string name="enviar">Enviar</string>
    <string name="emailUsuario">Email</string>
    <string name="nombreUsuario">Nombre</string>
    <string name="permisoRequerido">Permisos requeridos faltantes</string>
    <string name="guardarPerfil">Guardar perfil</string>
    <string name="errorUsuario">Error al cargar los datos del usuario</string>
    <string name="errorFoto">Error al almacenar la foto</string>
    <string name="perfilActualizadoOK">Perfil actualizado correctamente</string>
    <string name="imagenSubidaOK">La imagen se ha cargado correctamente</string>
    <string name="guardandoPerfil">Guardando perfil de usuario</string>
    <string name="loginEmail">Acceder</string>
    <string name="filtrarCursos">Filtrar cursos</string>
</resources>
