<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mis_cursos"
            android:icon="@drawable/ic_class_black_24dp"
            android:title="@string/mis_cursos" />
        <item
            android:id="@+id/calendario"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/calendario_acad_mico" />
        <item
            android:id="@+id/noticias"
            android:icon="@drawable/ic_local_library_black_24dp"
            android:title="@string/noticias" />
        <item
            android:id="@+id/configuracion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/configuracion" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/salir" />
    </group>

</menu>
