<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobile20171c.utnapp.CursoFragment"
    android:orientation="vertical"
    android:layout_margin="0dp">

    <android.support.design.widget.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:tabMode="fixed"
        android:id="@+id/tabsCurso"
        android:layout_weight="0"
        android:layout_marginBottom="20dp"
        app:tabTextColor="@color/colorPrimaryLight"
        android:background="@color/tabBackground">
    </android.support.design.widget.TabLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="20dp">

        <TextView
            android:id="@+id/cursoName"
            android:text="@string/materia"
            style="@style/AppTheme.FormLabel"
            />

        <TextView
            android:id="@+id/cursoNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/cursoCodigo"
            android:text="@string/codigo"
            style="@style/AppTheme.FormLabel"
            />

        <TextView
            android:id="@+id/cursoCodigoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/cursoProfesor"
            android:text="@string/profesor"
            style="@style/AppTheme.FormLabel"
            />

        <TextView
            android:id="@+id/cursoProfesorTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/cursoAula"
            android:text="@string/aula"
            style="@style/AppTheme.FormLabel"
            />

        <TextView
            android:id="@+id/cursoAulaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/cursoSede"
            android:text="@string/sede"
            style="@style/AppTheme.FormLabel"
            />

        <TextView
            android:id="@+id/cursoSedeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</LinearLayout>

